--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -24,8 +24,11 @@ a {
   text-decoration: none;
 }
 
-button {
+.main-button {
   cursor: pointer;
+  padding: 0;
+  border: none;
+  background-color: transparent;
 }
 
 img {
