--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,66 @@
+<header>
 
+
+
+    <div class="container header-container">
+
+      <a href="" class="logo">yachtjet</a>
+    
+
+        
+        <nav class="header-nav">
+             
+            <ul class="nav-list">
+
+                <li class="nav-list-item"><a class="nav-list-link" href="">ABOUT</a></li>
+                <li class="nav-list-item"><a class="nav-list-link" href="">YACHTS</a></li>
+                <li class="nav-list-item"><a class="nav-list-link" href="">REVIEWS</a></li>
+
+            </ul>
+
+        </nav>
+
+        <ul class="icon-list">
+
+            <li class="icon-list-item">
+                <a href="https://www.instagram.com/goitclub/">
+                    <svg class="header-icon" width="24" height="24">
+                        <use href="./img/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>    
+            </li>
+
+            <li class="icon-list-item">
+                <a href="https://www.youtube.com/c/GoIT">
+                    <svg class="header-icon" width="24" height="24">
+                        <use href="./img/icons.svg#icon-youtube"></use>
+                    </svg>
+                </a>    
+
+            </li>
+
+            <li class="icon-list-item">
+                <a href="https://www.facebook.com/goITclub/">
+                    <svg class="header-icon" width="24" height="24">
+                        <use href="./img/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+
+        </ul>
+
+        
+
+        <button type="button" class="header-button">
+            <svg class="icon-burger" width="28" height="28">
+                <use href="./img/icons.svg#icon-burger"></use>
+            </svg>
+        </button>
+
+       
+
+    </div>
+
+    
+
+</header>
