--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -23,7 +23,7 @@
         <ul class="icon-list">
 
             <li class="icon-list-item">
-                <a href="https://www.instagram.com/goitclub/">
+                <a href="https://www.instagram.com/goitclub/" target="_blank">
                     <svg class="header-icon" width="24" height="24">
                         <use href="./img/icons.svg#icon-instagram"></use>
                     </svg>
@@ -31,7 +31,7 @@
             </li>
 
             <li class="icon-list-item">
-                <a href="https://www.youtube.com/c/GoIT">
+                <a href="https://www.youtube.com/c/GoIT" target="_blank">
                     <svg class="header-icon" width="24" height="24">
                         <use href="./img/icons.svg#icon-youtube"></use>
                     </svg>
@@ -40,7 +40,7 @@
             </li>
 
             <li class="icon-list-item">
-                <a href="https://www.facebook.com/goITclub/">
+                <a href="https://www.facebook.com/goITclub/" target="_blank">
                     <svg class="header-icon" width="24" height="24">
                         <use href="./img/icons.svg#icon-facebook"></use>
                     </svg>
