--- a/src/css/common.css
+++ b/src/css/common.css
@@ -21,12 +21,20 @@ body {
   padding: 0 20px;
   margin: 0 auto;
 }
+
+.section{
+  padding-bottom: 80px;
+}
   
 @media screen and (min-width: 768px) {
   .container {
       max-width: 768px;
       padding: 0 32px;
   } 
+
+  .section{
+    padding-bottom: 150px;
+  }
 }
 
 @media screen and (min-width: 1158px) {
