--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,5 +14,6 @@
 @import url('./rent-a-yacht.css');
 @import url('./reviews.css');
 @import url('./footer.css');
+@import url('./mobile-menu.css');
 
 
