--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -13,10 +13,10 @@
       <li class="review-item">
         <img
           srcset="
-            ../img/reviews/reviews-mob-1x.png 1x,
-            ../img/reviews/reviews-mob-2x.png 2x
+            /img/reviews/reviews-mob-1x.png 1x,
+            /img/reviews/reviews-mob-2x.png 2x
           "
-          src="../img/reviews/reviews-mob-1x.png"
+          src="/img/reviews/reviews-mob-1x.png"
           alt="jhon"
           class="review-img"
           width="56"
@@ -32,10 +32,10 @@
       <li class="review-item">
         <img
           srcset="
-            ../img/reviews/reviews2-tab-1x.png 1x,
-            ../img/reviews/reviews2-tab-2x.png 2x
+            /img/reviews/reviews2-tab-1x.png 1x,
+            /img/reviews/reviews2-tab-2x.png 2x
           "
-          src="../img/reviews/reviews2-tab-1x.png"
+          src="/img/reviews/reviews2-tab-1x.png"
           alt="victoria"
           class="review-img"
           width="56"
@@ -51,10 +51,10 @@
       <li class="review-item">
         <img
           srcset="
-            ../img/reviews/reviews3-desk-1x.png 1x,
-            ../img/reviews/reviews3-desk-2x.png 2x
+            /img/reviews/reviews3-desk-1x.png 1x,
+            /img/reviews/reviews3-desk-2x.png 2x
           "
-          src="../img/reviews/reviews3-desk-1x.png"
+          src="/img/reviews/reviews3-desk-1x.png"
           alt="jhor"
           class="review-img"
           width="56"
