--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,8 +1,5 @@
-a {
-  display: inline-block;
-}
 .footer-section {
-  padding: 0px 10px;
+  padding: 0 10px;
 }
 .footer-container {
   min-width: 320px;
@@ -18,17 +15,10 @@ a {
   padding-bottom: 40px;
   justify-content: center;
 }
-/* in total sets
-.logo {
-  font-family: "Inter", sans-serif;
-  font-weight: 500;
-  font-size: 14px;
-  letter-spacing: -0.03em;
-  padding-right: 37px;
-} */
 .footer-logo {
   color: #fbfbfb;
   padding-right: 37px;
+  font-size: 14px;
 }
 .footer-info-list {
   display: flex;
@@ -149,7 +139,7 @@ a {
 /*-----desknormal-----*/
 @media screen and (min-width: 1280px) {
   .footer-container {
-    padding: 0px 25px;
+    padding: 0 25px;
     max-width: 1280px;
   }
   .footer-text-container {
