--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -43,6 +43,8 @@
   font-size: 9px;
   line-height: 1.3;
   text-transform: uppercase;
+  display: block;
+  padding: 15px 24px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-info-item:focus,
