--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -32,28 +32,28 @@
     <picture>
       <source
         srcset="
-          /img/advantages/advantages-desk-1x.png 1x,
-          /img/advantages/advantages-desk-2x.png 2x
+          /img/advantages/advantages-desk-1x.jpg 1x,
+          /img/advantages/advantages-desk-2x.jpg 2x
         "
         media="(min-width: 1158px)"
       />
       <source
         srcset="
-          /img/advantages/advantages-tab-1x.png 1x,
-          /img/advantages/advantages-tab-2x.png 2x
+          /img/advantages/advantages-tab-1x.jpg 1x,
+          /img/advantages/advantages-tab-2x.jpg 2x
         "
         media="(min-width: 768px)"
       />
       <source
         srcset="
-          /img/advantages/advantages-mob-1x.png 1x,
-          /img/advantages/advantages-mob-1x.png 2x
+          /img/advantages/advantages-mob-1x.jpg 1x,
+          /img/advantages/advantages-mob-1x.jpg 2x
         "
         media="(max-width: 767px)"
       />
       <img
         class="advantages-img"
-        src="/img/advantages/advantages-desk-1x.png"
+        src="/img/advantages/advantages-desk-1x.jpg"
         width="704"
         height="424"
         alt="advantages-img"
