--- a/src/partials/rent-a-yacht.html
+++ b/src/partials/rent-a-yacht.html
@@ -38,9 +38,9 @@
         </div>
         <picture class="rent-img">
            <source media="(min-width:1158px)" srcset="/img/rent-a-yacht/rent-a-yacht-desk-1x.jpg 1x,
-           /img/rent-a-yacht/rent-a-yacht-desk-2x.png 2x"/>
+           /img/rent-a-yacht/rent-a-yacht-desk-2x.jpg 2x"/>
            <source media="(min-width:768px)" srcset="/img/rent-a-yacht/rent-a-yacht-tab-1x.jpg 1x,
-           /img/rent-a-yacht/rent-a-yacht-tab-2x.png 2x"/>
+           /img/rent-a-yacht/rent-a-yacht-tab-2x.jpg 2x"/>
            <source media="(min-width:320px)" srcset="/img/rent-a-yacht/rent-a-yacht-mob-1x.jpg 1x,
            /img/rent-a-yacht/rent-a-yacht-mob-2x.jpg 2x"/>
            <img  src="/img/rent-a-yacht/rent-a-yacht-desk-1x.jpg"
