--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,13 +1,13 @@
-header,
+/* header,
 section {
   display: none;
-}
+} */
 ol {
   margin: 0;
   padding: 0;
   list-style: none;
 }
-.container {
+.container-one {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
@@ -72,7 +72,7 @@ ol {
 }
 
 @media screen and (min-width: 768px) {
-  .container {
+  .container-one {
     gap: 32px;
   }
 
@@ -104,7 +104,7 @@ ol {
 }
 
 @media screen and (min-width: 1158px) {
-  .container {
+  .container-one {
     flex-wrap: nowrap;
   }
   .advantages-container {
@@ -112,7 +112,7 @@ ol {
     flex-wrap: wrap;
     padding: 0 50px;
     max-width: 716px;
-    margin: 0;
+    margin-right: 0;
   }
 
   .advantages-list {
