--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,5 +1,5 @@
-<div class="container container-one section">
-  <div class="container container-one advantages-container">
+<div class="container-one">
+  <div class="container-one advantages-container">
     <h2 class="advantages-header visually-hidden">Advantages</h2>
     <ol class="advantages-list">
       <li class="advantages-item">
