--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -4,10 +4,6 @@ ol {
   list-style: none;
 }
 .container-one {
-  min-width: 320px;
-  max-width: 375px;
-  padding: 0 20px;
-  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
@@ -68,7 +64,7 @@ ol {
 
 .advantages-img {
   border-radius: 24px;
-  min-width: 320px;
+  /* min-width: 320px; */
 }
 
 @media screen and (min-width: 768px) {
