--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,4 +1,14 @@
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 
+.container-one {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
 .advantages-container {
   background-color: #1b414b;
   border-radius: 24px;
@@ -55,7 +65,6 @@
 
 .advantages-img {
   border-radius: 24px;
-  min-width: 320px;
 }
 
 @media screen and (min-width: 768px) {
