--- a/src/css/common.css
+++ b/src/css/common.css
@@ -29,6 +29,7 @@ body {
 @media screen and (min-width: 768px) {
   .container {
       max-width: 768px;
+      min-width: 376px;
       padding: 0 32px;
   } 
 
@@ -40,6 +41,7 @@ body {
 @media screen and (min-width: 1158px) {
   .container {
       max-width: 1280px;
+      min-width: 769px;
       padding: 0 50px;
   } 
 }
