--- a/src/css/header.css
+++ b/src/css/header.css
@@ -45,7 +45,7 @@
     font-weight: 400;
     line-height: 11.7px;
     text-align: center;
-    
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-list-link{
@@ -53,6 +53,7 @@
     display: block;
     padding: 15px 24px;
     border-radius: 8px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
