--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="advantages-section section">
   <div class="container container-one">
     <div class="advantages-container">
       <h2 class="advantages-header visually-hidden">Advantages</h2>
@@ -36,7 +36,7 @@
             /img/advantages/advantages-desk-1x.jpg 1x,
             /img/advantages/advantages-desk-2x.jpg 2x
           "
-          media="(min-width: 1158px)"
+          media="(min-width: 1280px)"
         />
         <source
           srcset="
