--- a/src/css/common.css
+++ b/src/css/common.css
@@ -23,7 +23,8 @@ body {
 }
 
 .section{
-  padding-bottom: 80px;
+  padding-top: 75px;
+  padding-bottom: 75px;
 }
   
 @media screen and (min-width: 768px) {
@@ -36,6 +37,7 @@ body {
   .section{
     padding-bottom: 150px;
   }
+
 }
 
 @media screen and (min-width: 1280px) {
