--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,9 +1,3 @@
-ol {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
 .container-one {
   display: flex;
   flex-wrap: wrap;
@@ -25,6 +19,7 @@ ol {
 }
 
 .advantages-item {
+  width: 100%;
   max-width: 295px;
 }
 
@@ -43,7 +38,6 @@ ol {
   width: 100%;
   position: absolute;
   border-radius: 18px;
-  width: 295px;
   height: 2px;
   background-color: rgba(251, 251, 251, 0.1);
   left: 0;
@@ -66,7 +60,6 @@ ol {
 .advantages-img {
   border-radius: 24px;
 }
-
 
 @media screen and (min-width: 768px) {
   .container-one {
@@ -92,10 +85,6 @@ ol {
     font-size: 32px;
   }
 
-  .advantages-item-header::before {
-    width: 304px;
-  }
-
   .advantages-img-container {
     max-width: 704px;
   }
@@ -119,10 +108,6 @@ ol {
   }
   .advantages-item {
     max-width: 286px;
-  }
-
-  .advantages-item-header::before {
-    width: 280px;
   }
 
   .advantages-img-container {
