--- a/src/partials/mob-menu.html
+++ b/src/partials/mob-menu.html
@@ -1,101 +1,49 @@
-<div class="container header-container">↩
-    <a href="" class="logo">yachtjet</a>↩
-↩
-    <nav class="header-nav">↩
-      <ul class="nav-list">↩
-        <li class="nav-list-item">↩
-          <a class="nav-list-link" href="">ABOUT</a>↩
-        </li>↩
-        <li class="nav-list-item">↩
-          <a class="nav-list-link" href="">YACHTS</a>↩
-        </li>↩
-        <li class="nav-list-item">↩
-          <a class="nav-list-link" href="">REVIEWS</a>↩
-        </li>↩
-      </ul>↩
-    </nav>↩
-↩
-    <ul class="icon-list">↩
-      <li class="icon-list-item">↩
-        <a href="https://www.instagram.com/goitclub/" target="_blank">↩
-          <svg class="header-icon" width="24" height="24">↩
-            <use href="./img/icons.svg#icon-instagram"></use>↩
-          </svg>↩
-        </a>↩
-      </li>↩
-↩
-      <li class="icon-list-item">↩
-        <a href="https://www.youtube.com/c/GoIT" target="_blank">↩
-          <svg class="header-icon" width="24" height="24">↩
-            <use href="./img/icons.svg#icon-youtube"></use>↩
-          </svg>↩
-        </a>↩
-      </li>↩
-↩
-      <li class="icon-list-item">↩
-        <a href="https://www.facebook.com/goITclub/" target="_blank">↩
-          <svg class="header-icon" width="24" height="24">↩
-            <use href="./img/icons.svg#icon-facebook"></use>↩
-          </svg>↩
-        </a>↩
-      </li>↩
-    </ul>↩
-↩
-    <button type="button" class="header-button">↩
-      <svg class="icon-burger" width="28" height="28">↩
-        <use href="./img/icons.svg#icon-burger"></use>↩
-      </svg>↩
-    </button>↩
-  </div>↩
-</header>↩
-↩
-<div class="mob-menu is-open">↩
-  <div class="container mob-container">↩
-    <div class="mob-logo-wrap">↩
-      <a href="" class="logo">yachtjet</a>↩
-      <button type="button" class="header-button mob-btn">↩
-        <svg class="icon-close" width="16" height="16">↩
-          <use href="./img/icons.svg#icon-close"></use>↩
-        </svg>↩
-      </button>↩
-    </div>↩
-    <nav class="mobile-nav">↩
-      <ul class="mob-list">↩
-        <li class="mob-item">↩
-          <a class="mob-nav-link" href="">ABOUT</a>↩
-        </li>↩
-        <li class="mob-item">↩
-          <a class="mob-nav-link" href="">YACHTS</a>↩
-        </li>↩
-        <li class="mob-item">↩
-          <a class="mob-nav-link" href="">REVIEWS</a>↩
-        </li>↩
-      </ul>↩
-    </nav>↩
-    <ul class="mob-icon-list">↩
-      <li class="icon-list-item">↩
-        <a href="https://www.instagram.com/goitclub/" target="_blank">↩
-          <svg class="header-icon mob-icon" width="24" height="24">↩
-            <use href="./img/icons.svg#icon-instagram"></use>↩
-          </svg>↩
-        </a>↩
-      </li>↩
-↩
-      <li class="icon-list-item">↩
-        <a href="https://www.youtube.com/c/GoIT" target="_blank">↩
-          <svg class="header-icon mob-icon" width="24" height="24">↩
-            <use href="./img/icons.svg#icon-youtube"></use>↩
-          </svg>↩
-        </a>↩
-      </li>↩
-↩
-      <li class="icon-list-item">↩
-        <a href="https://www.facebook.com/goITclub/" target="_blank">↩
-          <svg class="header-icon mob-icon" width="24" height="24">↩
-            <use href="./img/icons.svg#icon-facebook"></use>↩
-          </svg>↩
-        </a>↩
-      </li>↩
-    </ul>↩
-  </div>↩
-</div>↩
+<div class="mob-menu js-menu-container">
+  <div class="container mob-container">
+    <div class="mob-logo-wrap">
+      <a href="" class="logo">yachtjet</a>
+      <button type="button" class="header-button mob-btn js-close-menu">
+        <svg class="icon-close" width="16" height="16">
+          <use href="./img/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+    </div>
+    <nav class="mobile-nav">
+      <ul class="mob-list">
+        <li class="mob-item part">
+          <a class="mob-nav-link" href="">ABOUT</a>
+        </li>
+        <li class="mob-item">
+          <a class="mob-nav-link" href="">YACHTS</a>
+        </li>
+        <li class="mob-item">
+          <a class="mob-nav-link" href="">REVIEWS</a>
+        </li>
+      </ul>
+    </nav>
+    <ul class="mob-icon-list">
+      <li class="icon-list-item">
+        <a href="https://www.instagram.com/goitclub/" target="_blank">
+          <svg class="mob-icon" width="24" height="24">
+            <use href="./img/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+
+      <li class="icon-list-item">
+        <a href="https://www.youtube.com/c/GoIT" target="_blank">
+          <svg class="mob-icon" width="24" height="24">
+            <use href="./img/icons.svg#icon-youtube"></use>
+          </svg>
+        </a>
+      </li>
+
+      <li class="icon-list-item">
+        <a href="https://www.facebook.com/goITclub/" target="_blank">
+          <svg class="mob-icon" width="24" height="24">
+            <use href="./img/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
