--- a/src/css/rent-a-yacht.css
+++ b/src/css/rent-a-yacht.css
@@ -68,6 +68,7 @@
     border: none;
     font-family: "Inter", sans-serif;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (min-width: 768px) {
