--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,13 @@
 <section class="hero-section">
   <div class="contain hero">
-      <h1 class="page-title">Explore the High Seas with Our Luxury Yacht Rentals</h1>
-      <p class="hero-paragraf">Experience the freedom and luxury of yachting on the open seas. Choose from our top-of-the-line yachts and embark on an unforgettable journey surrounded by breathtaking views and state-of-the-art amenities.</p>
-      <a href="" class="hero-button">Yacht rental</a>
+    <h1 class="page-title">
+      Explore the High Seas with Our Luxury Yacht Rentals
+    </h1>
+    <p class="hero-paragraf">
+      Experience the freedom and luxury of yachting on the open seas. Choose
+      from our top-of-the-line yachts and embark on an unforgettable journey
+      surrounded by breathtaking views and state-of-the-art amenities.
+    </p>
+    <a href="#rent" class="hero-button">Yacht rental</a>
   </div>
 </section>
