--- a/src/partials/mob-menu.html
+++ b/src/partials/mob-menu.html
@@ -11,13 +11,13 @@
     <nav class="mobile-nav">
       <ul class="mob-list">
         <li class="mob-item part">
-          <a class="mob-nav-link" href="">ABOUT</a>
+          <a class="mob-nav-link" href="#about">ABOUT</a>
         </li>
         <li class="mob-item">
-          <a class="mob-nav-link" href="">YACHTS</a>
+          <a class="mob-nav-link" href="#yachts">YACHTS</a>
         </li>
         <li class="mob-item">
-          <a class="mob-nav-link" href="">REVIEWS</a>
+          <a class="mob-nav-link" href="#reviews">REVIEWS</a>
         </li>
       </ul>
     </nav>
@@ -47,3 +47,4 @@
       </li>
     </ul>
   </div>
+</div>
