--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,13 +5,13 @@
     <nav class="header-nav">
       <ul class="nav-list">
         <li class="nav-list-item">
-          <a class="nav-list-link" href="">ABOUT</a>
+          <a class="nav-list-link" href="#about">ABOUT</a>
         </li>
         <li class="nav-list-item">
-          <a class="nav-list-link" href="">YACHTS</a>
+          <a class="nav-list-link" href="#yachts">YACHTS</a>
         </li>
         <li class="nav-list-item">
-          <a class="nav-list-link" href="">REVIEWS</a>
+          <a class="nav-list-link" href="#reviews">REVIEWS</a>
         </li>
       </ul>
     </nav>
