--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -6,7 +6,7 @@
 .advantages-container {
   background-color: #1b414b;
   border-radius: 24px;
-  padding: 0 20px;
+  padding: 80px 20px;
 }
 
 .advantages-list {
@@ -14,8 +14,6 @@
   flex-wrap: wrap;
   width: 100%;
   row-gap: 40px;
-  padding-top: 80px;
-  padding-bottom: 80px;
 }
 
 .advantages-item {
@@ -68,11 +66,9 @@
   }
 
   .advantages-container {
-    padding: 0 32px;
+    padding: 90px 32px;
   }
   .advantages-list {
-    padding-top: 90px;
-    padding-bottom: 90px;
     row-gap: 44px;
     column-gap: 32px;
   }
@@ -98,7 +94,7 @@
   .advantages-container {
     display: flex;
     flex-wrap: wrap;
-    padding: 0 50px;
+    padding: 90px 50px;
     max-width: 716px;
     margin-right: 0;
   }
