--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -25,7 +25,7 @@
 .review-item {
   border-radius: 24px;
   background-color: #fbfbfb;
-  padding: 32px 0;
+  padding: 32px 8px;
 }
 
 .review-item:not(:first-child) {
@@ -96,6 +96,7 @@
   }
 
   .review-item {
+    padding: 32px 28px;
     width: calc((100% - 52px) / 3);
   }
   .review-item:last-child {
