--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -4,24 +4,24 @@
       <h2 class="advantages-header visually-hidden">Advantages</h2>
       <ol class="advantages-list">
         <li class="advantages-item">
-          <h3 class="advantages-item-header">01</h3>
+          <span class="advantages-item-span">01</і>
           <p class="advantages-text">
             Swimming and water sports: try your hand at water skiing
           </p>
         </li>
         <li class="advantages-item">
-          <h3 class="advantages-item-header">02</h3>
+          <span class="advantages-item-span">02</і>
           <p class="advantages-text">Fishing: try to catch your own dinner</p>
         </li>
         <li class="advantages-item">
-          <h3 class="advantages-item-header">03</h3>
+          <span class="advantages-item-span">03</і>
           <p class="advantages-text">
             Sightseeing tours: take a shore or island tour, enjoy the views and
             sunsets from the water
           </p>
         </li>
         <li class="advantages-item">
-          <h3 class="advantages-item-header">04</h3>
+          <span class="advantages-item-span">04</і>
           <p class="advantages-text">
             Rest and relaxation: read a book or listen to music while enjoying
             the outdoor atmosphere.
