--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -4,24 +4,24 @@
       <h2 class="advantages-header visually-hidden">Advantages</h2>
       <ol class="advantages-list">
         <li class="advantages-item">
-          <span class="advantages-item-span">01</і>
+          <span class="advantages-item-span">01</span>
           <p class="advantages-text">
             Swimming and water sports: try your hand at water skiing
           </p>
         </li>
         <li class="advantages-item">
-          <span class="advantages-item-span">02</і>
+          <span class="advantages-item-span">02</span>
           <p class="advantages-text">Fishing: try to catch your own dinner</p>
         </li>
         <li class="advantages-item">
-          <span class="advantages-item-span">03</і>
+          <span class="advantages-item-span">03</span>
           <p class="advantages-text">
             Sightseeing tours: take a shore or island tour, enjoy the views and
             sunsets from the water
           </p>
         </li>
         <li class="advantages-item">
-          <span class="advantages-item-span">04</і>
+          <span class="advantages-item-span">04</span>
           <p class="advantages-text">
             Rest and relaxation: read a book or listen to music while enjoying
             the outdoor atmosphere.
