--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,21 +1,27 @@
 <footer class="footer-section">
   <div class="footer-container">
     <div class="footer-info-container">
-      <a class="logo footer-logo" href="/index.html">yachtjet</a>
-      <ul class="footer-info-list">
-        <li class="footer-info-item">
-          <a class="footer-link" href="#about">About</a>
-        </li>
-        <li class="footer-info-item">
-          <a class="footer-link" href="#yachts">Yachts</a>
-        </li>
-        <li class="footer-info-item">
-          <a class="footer-link" href="#reviews">Reviews</a>
-        </li>
-      </ul>
+      <div class="footer-nav-container">
+        <a class="logo footer-logo" href="/index.html">yachtjet</a>
+        <nav class="footer-nav">
+          <ul class="footer-info-list">
+            <li class="footer-info-item">
+              <a class="footer-link" href="#about">About</a>
+            </li>
+            <li class="footer-info-item">
+              <a class="footer-link" href="#yachts">Yachts</a>
+            </li>
+            <li class="footer-info-item">
+              <a class="footer-link" href="#reviews">Reviews</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
       <ul class="footer-list-icons">
         <li class="footer-item-icons">
           <a
+            rel="nofollow"
+            rel="noreferrer"
             class="footer-icons-link"
             href="https://www.instagram.com/goitclub/"
             target="_blank"
@@ -27,6 +33,8 @@
         </li>
         <li class="footer-item-icons">
           <a
+            rel="nofollow"
+            rel="noreferrer"
             class="footer-icons-link"
             href="https://www.youtube.com/c/GoIT"
             target="_blank"
@@ -38,6 +46,8 @@
         </li>
         <li class="footer-item-icons">
           <a
+            rel="nofollow"
+            rel="noreferrer"
             class="footer-icons-link"
             href="https://www.facebook.com/goITclub/"
             target="_blank"
