--- a/src/partials/mob-menu.html
+++ b/src/partials/mob-menu.html
@@ -1,4 +1,4 @@
-<div class="mob-menu js-menu-container is-open">
+<div class="mob-menu js-menu-container">
   <div class="container mob-container">
     <div class="mob-logo-wrap">
       <a href="" class="logo">yachtjet</a>
