--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -2,52 +2,65 @@
   padding: 0 10px;
 }
 .footer-container {
+  min-width: 320px;
   max-width: 375px;
   margin: 0 auto;
   background-color: #1b414b;
   border-radius: 24px 24px 0 0;
-  padding: 40px 30px 20px 30px;
 }
 .footer-info-container {
-  margin-bottom: 40px;
-}
-.footer-nav-container {
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 80px;
+  flex-wrap: wrap;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  justify-content: center;
 }
 .footer-logo {
   color: #fbfbfb;
+  padding-right: 37px;
+  font-size: 14px;
 }
 .footer-info-list {
   display: flex;
+  text-align: center;
+  justify-content: center;
   gap: 4px;
 }
-.footer-link {
+.footer-info-item {
   display: flex;
   background-color: rgba(251, 251, 251, 0.3);
   border-radius: 8px;
+  width: 66px;
+  height: 40px;
   justify-content: center;
   align-items: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-link {
   color: #fbfbfb;
   font-family: 'Inter', sans-serif;
   font-weight: 400;
   font-size: 9px;
   line-height: 1.3;
   text-transform: uppercase;
-  padding: 15px 12px;
-  min-width: 66px;
+  display: block;
+  padding: 15px 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-info-item:focus,
+.footer-info-item:hover {
+  background-color: #fbfbfb;
 }
 .footer-linl:focus,
 .footer-link:hover {
   color: #1b414b;
-  background-color: #fbfbfb;
 }
 .footer-list-icons {
   display: flex;
   gap: 8px;
-  justify-content: center;
+  padding-top: 80px;
+  padding-right: 133px;
+  padding-left: 133px;
 }
 .footer-icons {
   fill: #fbfbfb;
@@ -57,7 +70,7 @@
   fill: #062730;
 }
 .footer-text-container {
-  margin-bottom: 82px;
+  padding: 0 38px 82px;
 }
 .footer-main-text {
   font-size: 18px;
@@ -67,11 +80,12 @@
   color: #fbfbfb;
 }
 .footer-link-container {
+  padding-bottom: 20px;
   display: flex;
   justify-content: center;
 }
 .footer-link-text {
-  margin-right: 10px;
+  padding-right: 20px;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.03em;
@@ -86,30 +100,30 @@
 }
 /*-----tablet-----*/
 @media screen and (min-width: 768px) {
-  .footer-section {
-    padding: 0 16px;
-  }
   .footer-container {
-    padding: 50px 48px 20px 48px;
+    padding: 0 16px;
     max-width: 768px;
   }
   .footer-info-container {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 96px;
-  }
-  .footer-nav-container {
-    margin: 0;
-  }
-  .footer-logo {
-    margin-right: 110px;
+    flex-wrap: nowrap;
+    padding-top: 50px;
+    padding-bottom: 96px;
+    justify-content: space-around;
   }
   .footer-logo {
     font-size: 20px;
   }
-  .footer-link {
-    padding: 15px 24px;
-    min-width: 91px;
+  .footer-info-item {
+    width: 91px;
+  }
+  .footer-list-icons {
+    display: flex;
+    gap: 8px;
+    padding: 0;
+  }
+  .footer-text-container {
+    padding: 0 48px 99px 48px;
   }
   .footer-main-text {
     font-size: 32px;
@@ -124,21 +138,22 @@
     line-height: 1.18;
   }
 }
-/*-----desktop-----*/
+/*-----desknormal-----*/
 @media screen and (min-width: 1280px) {
-  .footer-section {
-    padding: 0 25px;
-  }
   .footer-container {
+    padding: 0 25px;
     max-width: 1280px;
-    padding: 50px 75px 20px 75px;
-  }
-  .footer-logo {
-    margin-right: 330px;
   }
   .footer-text-container {
-    max-width: 693px;
-    margin: 0 auto;
-    margin-bottom: 99px;
+    padding: 96px 268px 136px 269px;
+  }
+}
+/*-----deskbig-----*/
+@media screen and (min-width: 1440px) {
+  .footer-container {
+    max-width: 1440px;
+  }
+  .footer-text-container {
+    padding: 96px 346px 99px 345px;
   }
 }
