--- a/src/partials/rent-a-yacht.html
+++ b/src/partials/rent-a-yacht.html
@@ -4,6 +4,7 @@
       <h2 class="rent-title" id="rent">Rent a yacht now</h2>
       <form class="rent-form" name="feedback-form" autocomplete="off">
         <div class="input-container">
+            <label class="label-input" for="user-name">Full Name</label>
           <input
             class="form-input"
             name="user-name"
@@ -13,6 +14,7 @@
             required
             placeholder="Full Name"
           />
+        <label class="label-input" for="input-email">Email</label>
           <input
             class="form-input"
             name="input-email"
@@ -22,6 +24,7 @@
             pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
             placeholder="Email"
           />
+        <label class="label-input" for="input-phone">Phone number</label>
           <input
             class="form-input"
             name="input-phone"
@@ -31,6 +34,7 @@
             pattern="^\+\d{2}-\d{3}-\d{3}-\d{2}-\d{2}$"
             placeholder="Phone number"
           />
+        <label class="label-input" for="user-comment">Comment</label>
           <textarea
             class="input-comment form-input"
             name="user-comment"
