--- a/src/partials/mob-menu.html
+++ b/src/partials/mob-menu.html
@@ -23,7 +23,7 @@
     </nav>
     <ul class="mob-icon-list">
       <li class="icon-list-item">
-        <a href="https://www.instagram.com/goitclub/" target="_blank" rel = «nofollow» rel = «noreferrer»>
+        <a href="https://www.instagram.com/goitclub/" target="_blank" rel="noopener noreferrer nofollow">
           <svg class="mob-icon" width="24" height="24">
             <use href="./img/icons.svg#icon-instagram"></use>
           </svg>
@@ -31,7 +31,7 @@
       </li>
 
       <li class="icon-list-item">
-        <a href="https://www.youtube.com/c/GoIT" target="_blank" rel = «nofollow» rel = «noreferrer»>
+        <a href="https://www.youtube.com/c/GoIT" target="_blank" rel="noopener noreferrer nofollow" >
           <svg class="mob-icon" width="24" height="24">
             <use href="./img/icons.svg#icon-youtube"></use>
           </svg>
@@ -39,7 +39,7 @@
       </li>
 
       <li class="icon-list-item">
-        <a href="https://www.facebook.com/goITclub/" target="_blank" rel = «nofollow» rel = «noreferrer»>
+        <a href="https://www.facebook.com/goITclub/" target="_blank" rel="noopener noreferrer nofollow">
           <svg class="mob-icon" width="24" height="24">
             <use href="./img/icons.svg#icon-facebook"></use>
           </svg>
