--- a/src/css/header.css
+++ b/src/css/header.css
@@ -131,5 +131,6 @@
     .header-icon:hover,
     .header-icon:focus{
         fill: #062730;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 }
