--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header>
   <div class="container header-container">
-    <a href="" class="logo">yachtjet</a>
+    <a href="./index.html" class="logo">yachtjet</a>
 
     <nav class="header-nav">
       <ul class="nav-list">
@@ -18,7 +18,7 @@
 
     <ul class="icon-list">
       <li class="icon-list-item">
-        <a href="https://www.instagram.com/goitclub/" target="_blank" rel = «nofollow» rel = «noreferrer»>
+        <a href="https://www.instagram.com/goitclub/" target="_blank" rel = "nofollow  noreferrer noopener">
           <svg class="header-icon" width="24" height="24">
             <use href="./img/icons.svg#icon-instagram"></use>
           </svg>
@@ -26,7 +26,7 @@
       </li>
 
       <li class="icon-list-item">
-        <a href="https://www.youtube.com/c/GoIT" target="_blank" rel = «nofollow» rel = «noreferrer»>
+        <a href="https://www.youtube.com/c/GoIT" target="_blank" rel = "nofollow noreferrer noopener">
           <svg class="header-icon" width="24" height="24">
             <use href="./img/icons.svg#icon-youtube"></use>
           </svg>
@@ -34,7 +34,7 @@
       </li>
 
       <li class="icon-list-item">
-        <a href="https://www.facebook.com/goITclub/" target="_blank" rel = «nofollow» rel = «noreferrer»>
+        <a href="https://www.facebook.com/goITclub/" target="_blank" rel = "nofollow  noreferrer noopener">
           <svg class="header-icon" width="24" height="24">
             <use href="./img/icons.svg#icon-facebook"></use>
           </svg>
